--- a/framework/gulp/package.json
+++ b/framework/gulp/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "gulp-express": "^0.3.5",
-    "gulp-less": "^3.1.0"
+    "gulp-less": "^3.1.0",
+    "gulp-live-server": "0.0.29"
   }
 }
